--- a/keith-quotes-webapp/package.json
+++ b/keith-quotes-webapp/package.json
@@ -6,18 +6,30 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@twilio/runtime-handler": "^1.2.2",
     "create-react-app": "^5.0.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.21",
+    "node-env-run": "^4.0.2",
+    "os": "^0.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "twilio": "^3.75.1",
-    "web-vitals": "^2.1.4"
+    "url": "^0.11.0",
+    "util": "^0.12.4",
+    "web-vitals": "^2.1.4",
+    "xmldom": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto --hack"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +48,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "@types/node": "^17.0.22",
+    "rn-nodeify": "^6.0.1"
+  },
+  "author": "",
+  "license": "ISC",
+  "keywords": []
 }
