--- a/keith-quotes-webapp/package.json
+++ b/keith-quotes-webapp/package.json
@@ -17,6 +17,8 @@
     "os": "^0.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-crypto": "^2.2.0",
+    "react-native-randombytes": "^2.3.0",
     "react-scripts": "5.0.0",
     "twilio": "^3.75.1",
     "url": "^0.11.0",
@@ -28,8 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "node_modules/.bin/rn-nodeify --install crypto --hack"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
